rajout d'une image

--- a/cv.html
+++ b/cv.html
@@ -78,6 +78,7 @@
             <h3>Loisirs</h3>
             <p>Football</p>
             <p>Musique</p>
+            <img src="Sans titre.png" alt="logo">
         </div>
     </div>
 </body>
